<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighterBlue"
    tools:context="coffee.prototype.android.todolist.AddTask">

    <EditText
        android:id="@+id/task_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:hint="@string/add_time_name_of_task"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/white"

        android:textColorHint="@android:color/white"
        android:maxLines="1"
        android:textColor="@color/white"

        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/task_time"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/task_name"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="70dp"
        android:hint="@string/add_time_text"
        android:maxLines="1"
        android:textAlignment="center"
        android:maxLength="5"

        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@android:color/white"
        android:inputType="number" />

    <Button
        android:id="@+id/add_time"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@+id/task_name"
        android:layout_marginTop="65dp"
        android:layout_toRightOf="@id/task_time"
        android:layout_toEndOf="@id/task_time"

        android:text="Add time"
        android:onClick="openClockPrompt"
        android:backgroundTint="@color/colorAccent"/>

    <TextView
        android:id="@+id/cancel"
        style="@style/receipt_child_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priotiy"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_task_cancel_text"
        android:onClick="navigateToBackHome"

        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/save"
        style="@style/receipt_child_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priotiy"
        android:layout_marginStart="270dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_task_save_text"
        android:onClick="validateFields"
        android:textColor="@android:color/white"
        android:textSize="22sp">

    </TextView>

    <RadioGroup
        android:id="@+id/priotiy"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="270dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"


        >


    <RadioButton

        android:id="@+id/low_prioity"
        style="@style/receipt_child_values"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:checked="false"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:onClick="priorityOfTask"
        android:text="@string/low_priority"

        android:textSize="20sp" />

    <RadioButton

        android:id="@+id/meduim_prioity"
        style="@style/receipt_child_values"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:checked="false"
        android:textColor="@color/white"


        android:onClick="priorityOfTask"
        android:text="@string/med_priority"
        android:buttonTint="@color/white"

        android:textSize="20sp" />

        <RadioButton

            android:id="@+id/high_prioity"
            style="@style/receipt_child_values"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:checked="false"
            android:textColor="@color/white"

            android:onClick="priorityOfTask"
            android:text="@string/high_priority"
            android:buttonTint="@color/white"
            android:textSize="20sp" />


    </RadioGroup>


</RelativeLayout>
